# cppsimpletemplate

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  simpleconstants.hpp  simplemath.cpp  simplemath.hpp
test/: 01test.cpp  02test.cpp  03test.cpp  CMakeLists.txt  main.cpp
